tests/ui/const-generics/issues/issue-62878.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-62878.rs:5:38
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                                      ^ the type must not depend on the parameter `N`

error: `[u8; N]` is forbidden as the type of a const generic parameter
  --> $DIR/issue-62878.rs:5:33
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                                 ^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`
help: add `#![feature(adt_const_params)]` to the crate attributes to enable more complex and user defined types
   |
LL + #![feature(adt_const_params)]
   |

error[E0658]: const arguments cannot yet be inferred with `_`
  --> $DIR/issue-62878.rs:10:11
   |
LL |     foo::<_, { [1] }>();
   |           ^
   |
   = note: see issue #85077 <https://github.com/rust-lang/rust/issues/85077> for more information
   = help: add `#![feature(generic_arg_infer)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0658, E0770.
For more information about an error, try `rustc --explain E0658`.
